// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`extendProfilesByOsMinor extends profiles by OS minor versions using a map 1`] = `
[
  {
    "id": "1",
    "osMinorVersion": "5",
    "title": "Only one OS minor",
  },
  {
    "id": "2",
    "osMinorVersion": "6",
    "title": "Expanded to two OS minor",
  },
  {
    "id": "2",
    "osMinorVersion": "7",
    "title": "Expanded to two OS minor",
  },
  {
    "id": "3",
    "osMinorVersion": "8",
    "title": "Version overwritten",
  },
  {
    "id": "4",
    "osMinorVersion": undefined,
    "title": "Unmatched",
  },
]
`;

exports[`profilesWithRulesToSelection appends new profiles with rules to a selection and keeps existing 1`] = `
[
  {
    "id": "1",
    "osMinorVersion": "00",
    "ruleRefIds": [
      "profile1-different-os-rule",
    ],
  },
  {
    "id": "1",
    "osMinorVersion": "5",
    "ruleRefIds": [
      "profile1-rule3",
      "profile1-rule4",
    ],
  },
  {
    "id": "99",
    "osMinorVersion": "5",
    "ruleRefIds": [
      "profile99-rule1",
      "profile99-rule2",
    ],
  },
  {
    "id": "2",
    "osMinorVersion": "6",
    "ruleRefIds": [
      "profile2-rule1",
      "profile2-rule2",
    ],
  },
]
`;

exports[`profilesWithRulesToSelection converts profiles with rules to brand new selection 1`] = `
[
  {
    "id": "1",
    "osMinorVersion": "5",
    "ruleRefIds": [
      "profile1-rule1",
      "profile1-rule2",
    ],
  },
  {
    "id": "2",
    "osMinorVersion": "6",
    "ruleRefIds": [
      "profile2-rule1",
      "profile2-rule2",
    ],
  },
]
`;

exports[`profilesWithRulesToSelection converts profiles with rules to brand new selection using only option 1`] = `
[
  {
    "id": "1",
    "osMinorVersion": "5",
    "ruleRefIds": [
      "profile1-rule1",
      "profile1-rule2",
    ],
  },
  {
    "id": "2",
    "osMinorVersion": "6",
    "ruleRefIds": [
      "profile2-rule1",
      "profile2-rule2",
    ],
  },
]
`;

exports[`profilesWithRulesToSelection errors gracefully on missing osMinorVersion 1`] = `
[
  {
    "id": "1",
    "osMinorVersion": undefined,
    "ruleRefIds": [
      "profile1-rule1",
      "profile1-rule2",
    ],
  },
  {
    "id": "2",
    "osMinorVersion": undefined,
    "ruleRefIds": [
      "profile2-rule1",
      "profile2-rule2",
    ],
  },
]
`;

exports[`profilesWithRulesToSelection errors gracefully on missing rules 1`] = `
[
  {
    "id": "1",
    "osMinorVersion": "5",
    "ruleRefIds": [],
  },
  {
    "id": "2",
    "osMinorVersion": "6",
    "ruleRefIds": [],
  },
]
`;

exports[`profilesWithRulesToSelection keeps existing profile rules selection if they match new profiles 1`] = `
[
  {
    "id": "1",
    "osMinorVersion": "5",
    "ruleRefIds": [
      "profile1-rule3",
      "profile1-rule4",
    ],
  },
  {
    "id": "2",
    "osMinorVersion": "6",
    "ruleRefIds": [
      "profile2-rule1",
      "profile2-rule2",
    ],
  },
]
`;
